# haskell-google-server-api

./: .gitignore  LICENSE  flake.nix  google-server-api.cabal
src/Google/: Client.hs  Form.hs  JWT.hs  Response.hs  Type.hs
