cabal-version: 3.0

name:           google-server-api
version:        0.4.2.0
synopsis:       Google APIs for server to server applications
description:    This library provides a way to use Google API for server to server applications.
category:       Web
homepage:       https://github.com/livtours/haskell-google-server-api#readme
bug-reports:    https://github.com/livtours/haskell-google-server-api/issues
author:         LivTours
maintainer:     LivTours
copyright:      2025 LivTours
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/livtours/haskell-google-server-api

library
  exposed-modules:
      Google.Client
      Google.Form
      Google.JWT
      Google.Response
      Google.Type
  other-modules:
      Paths_google_server_api
  hs-source-dirs:
      src
  default-extensions:
      BangPatterns
      BinaryLiterals
      ConstraintKinds
      DataKinds
      DefaultSignatures
      DeriveDataTypeable
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveTraversable
      DoAndIfThenElse
      DuplicateRecordFields
      EmptyDataDecls
      ExistentialQuantification
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GADTs
      GeneralizedNewtypeDeriving
      InstanceSigs
      KindSignatures
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      OverloadedStrings
      PartialTypeSignatures
      PatternGuards
      PolyKinds
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      Strict
      StrictData
      TupleSections
      TypeFamilies
      TypeSynonymInstances
      ViewPatterns
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  build-depends:
      aeson >=2.0 && <3
    , aeson-casing ==0.2.*
    , base ==4.*
    , base64-bytestring >=1.1 && <1.3
    , bytestring >=0.10 && <0.12
    , cryptonite >=0.28 && <2
    , http-api-data >=0.4 && <0.6
    , http-client >=0.6 && <0.8
    , http-client-tls ==0.3.*
    , http-media ==0.8.*
    , jwt ==0.11.*
    , mime-mail ==0.5.*
    , servant >=0.18 && <0.21
    , servant-client >=0.18 && <0.21
    , text >=1.2 && <2.1
    , time >=1.9 && <1.13
    , unordered-containers ==0.2.*
  default-language: Haskell2010
